make social links fixed on mobile

--- a/src/styles/components/Overlay.scss
+++ b/src/styles/components/Overlay.scss
@@ -18,6 +18,12 @@
     a {
       color: color("white");
     }
+
+    @include media("sm-down") {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+    }
   }
 
   &__footer {
